# CybSuite

./: .coveragerc  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  404.html  README.md  conftest.py  docker-compose.yml  index.html  install.sh  package.json  pyproject.toml  pyproject.toml.bak  run_backend.sh  run_frontend.sh  tox.ini
.github/workflows/: deploy-pages.yml  test.yml
backend/: database.py  main.py  models.py  populate_db.py  pyproject.toml  test.db
backend/routers/: data.py  plugins.py  report.py  schema.py
cyberdb/introduction/: index.html
docs/: mkdocs.yml
docs/docs/: .pages  index.md  install.md
docs/docs/cyberdb/: .pages  introduction.md
docs/docs/review/: .pages  introduction.md  quickstart.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: DataDetail.jsx  DataTable.jsx  DataView.jsx  IngestView.jsx  ReportView.jsx  ResizablePanels.css  SchemaTable.jsx  SchemaView.jsx  TableSidebar.jsx
frontend/src/config/: api.js
frontend/src/contexts/: SidebarContext.jsx
frontend2/src/config/: api.ts
install/: index.html
review/introduction/: index.html
review/quickstart/: index.html
search/: search_index.json
src/cybsuite/: __init__.py  consts.py  extension.py
src/cybsuite/api/: main.py
src/cybsuite/core/: install.py
tests/api/: test_health.py  test_schema.py
tests/cyberdb/: test_basics_with_known_models.py  test_cli.py  test_cyberdb_scan_manager.py  test_dns_resolution.py
tests/test_cyberdb/: test_cli.py
(+155 files in other folders)
