[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Nazime LAKEHAL",email = "nazime.lkh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.2"
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
